# Condominio_Project

./: .env.example  .gitignore  CODEX.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Base_documenation/: CODEX_MANUAL_CONDOMINIO.md
apps/accounts/: admin.py  models.py
apps/audit/: admin.py  models.py  services.py
apps/common/: exceptions.py  models.py
apps/communication/: admin.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
apps/core/: admin.py  forms.py  middleware.py  models.py  permissions.py  selectors.py  services.py  urls.py  views.py
apps/dashboard/: selectors.py  urls.py  views.py
apps/documents/: admin.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
apps/reservations/: admin.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
apps/tickets/: admin.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  local.py  production.py  test.py
docs/adr/: 0001-django-monolith.md  0002-row-based-multitenancy.md  0003-mvp-scope.md
docs/demo/: mvp-0.1-guided-demo.md
docs/mvp/: checklist.md
docs/operations/: deploy.md
docs/product/: strategy.md
docs/technical/: architecture.md  security.md  testing.md
static/css/: app.css
static/js/: reservation_form.js  unit_occupancy_form.js
templates/: 403.html
templates/base/: layout.html
templates/communication/: admin_announcement_list.html  announcement_detail.html  announcement_form.html  category_form.html  category_list.html  mural.html
tests/: conftest.py
(+49 files in other folders)
